--- a/Modules/.swiftpm/xcode/xcshareddata/xcschemes/Persistence.xcscheme
+++ b/Modules/.swiftpm/xcode/xcshareddata/xcschemes/Persistence.xcscheme
@@ -14,9 +14,9 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "Samples"
-               BuildableName = "Samples"
-               BlueprintName = "Samples"
+               BlueprintIdentifier = "Persistence"
+               BuildableName = "Persistence"
+               BlueprintName = "Persistence"
                ReferencedContainer = "container:">
             </BuildableReference>
          </BuildActionEntry>
@@ -29,10 +29,22 @@
       shouldUseLaunchSchemeArgsEnv = "YES">
       <TestPlans>
          <TestPlanReference
-            reference = "container:Samples.xctestplan"
+            reference = "container:Persistence.xctestplan"
             default = "YES">
          </TestPlanReference>
       </TestPlans>
+      <Testables>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "PersistenceTests"
+               BuildableName = "PersistenceTests"
+               BlueprintName = "PersistenceTests"
+               ReferencedContainer = "container:">
+            </BuildableReference>
+         </TestableReference>
+      </Testables>
    </TestAction>
    <LaunchAction
       buildConfiguration = "Debug"
@@ -54,9 +66,9 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "Samples"
-            BuildableName = "Samples"
-            BlueprintName = "Samples"
+            BlueprintIdentifier = "Persistence"
+            BuildableName = "Persistence"
+            BlueprintName = "Persistence"
             ReferencedContainer = "container:">
          </BuildableReference>
       </MacroExpansion>
