--- a/Modules/.swiftpm/xcode/xcshareddata/xcschemes/Processing.xcscheme
+++ b/Modules/.swiftpm/xcode/xcshareddata/xcschemes/Processing.xcscheme
@@ -14,9 +14,9 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "Producer"
-               BuildableName = "Producer"
-               BlueprintName = "Producer"
+               BlueprintIdentifier = "Processing"
+               BuildableName = "Processing"
+               BlueprintName = "Processing"
                ReferencedContainer = "container:">
             </BuildableReference>
          </BuildActionEntry>
@@ -29,10 +29,22 @@
       shouldUseLaunchSchemeArgsEnv = "YES">
       <TestPlans>
          <TestPlanReference
-            reference = "container:Producer.xctestplan"
+            reference = "container:Processing.xctestplan"
             default = "YES">
          </TestPlanReference>
       </TestPlans>
+      <Testables>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "ProcessingTests"
+               BuildableName = "ProcessingTests"
+               BlueprintName = "ProcessingTests"
+               ReferencedContainer = "container:">
+            </BuildableReference>
+         </TestableReference>
+      </Testables>
    </TestAction>
    <LaunchAction
       buildConfiguration = "Debug"
@@ -54,9 +66,9 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "Producer"
-            BuildableName = "Producer"
-            BlueprintName = "Producer"
+            BlueprintIdentifier = "Processing"
+            BuildableName = "Processing"
+            BlueprintName = "Processing"
             ReferencedContainer = "container:">
          </BuildableReference>
       </MacroExpansion>
