dismissLayersControl invokes layers button did tapped on control panel

--- a/YandexCupMusicApp.xcodeproj/xcshareddata/xcschemes/YandexCupMusicApp.xcscheme
+++ b/YandexCupMusicApp.xcodeproj/xcshareddata/xcschemes/YandexCupMusicApp.xcscheme
@@ -26,12 +26,16 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      shouldUseLaunchSchemeArgsEnv = "YES"
-      shouldAutocreateTestPlan = "YES">
+      shouldUseLaunchSchemeArgsEnv = "YES">
+      <TestPlans>
+         <TestPlanReference
+            reference = "container:YandexCupMusicApp.xctestplan"
+            default = "YES">
+         </TestPlanReference>
+      </TestPlans>
       <Testables>
          <TestableReference
-            skipped = "NO"
-            parallelizable = "YES">
+            skipped = "NO">
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "772EEF4D2AF00AEE0066F12C"
